crates/jsonschema-macros/tests/ui/unresolved_remote_ref.rs
#[jsonschema::validator(schema = r#"{"$ref":"http://example.com/remote"}"#)]
struct Validator;

fn main() {}
